--- a/public/Css/cadastroPage.css
+++ b/public/Css/cadastroPage.css
@@ -164,3 +164,11 @@ a{
     text-decoration: none;
     color: white;
 }
+
+.letters{
+    font-size: 20px;
+}
+
+#imagePreview{
+    max-width: 300px;
+}
